Transferred from the Adobe Open Source Subversion Repository
Revision: 9731
Author:   gosmith@adobe.com
Date:     2009-08-28T05:02:26.592693Z

Log Message: 
-----------
Made 'ant clean' delete the now-vestigial build output framework_textLayout.swc so that it doesn't hang around in people's frameworks/libs directory.

QE notes: None
Doc notes: None
Bugs: None
Reviewer: Jim Murphy to review
Tests run: ant checkintests
Is noteworthy for integration: No

Modified Paths:
--------------
/flex/sdk/trunk/frameworks/build.xml

git-svn-id: https://svn.apache.org/repos/asf/incubator/flex/trunk/frameworks@1247542 13f79535-47bb-0310-9956-ffa450edef68

--- a/build.xml
+++ b/build.xml
@@ -115,6 +115,9 @@
 		<ant dir="${basedir}/javascript" target="clean"/>
 		<!-- Delete empty folders -->
 		<delete dir="${basedir}/locale"/>
+		<!-- THIS CAN EVENTUALLY BE REMOVED: -->
+		<!-- Delete vestigial framework_textLayout.swc -->
+		<delete file="${basedir}/libs/framework_textLayout.swc"/>
 	</target>
 
 	<target name="prepare" description="Prepares for building framework SWCs">
