Transferred from the Adobe Open Source Subversion Repository
Revision: 10224
Author:   clucier@adobe.com
Date:     2009-09-14T12:35:41.293612Z

Log Message: 
-----------
Fix for seemingly invalid use of 'tar', fixes AIR integration extraction on Snow Leopard. 

QE notes: None
Doc notes: None
Bugs: N/A
Reviewer: Gaurav 
Tests run: Tested build on Windows.
Is noteworthy for integration: No

Modified Paths:
--------------
/flex/sdk/trunk/frameworks/build.xml

git-svn-id: https://svn.apache.org/repos/asf/incubator/flex/trunk/frameworks@1247543 13f79535-47bb-0310-9956-ffa450edef68

--- a/build.xml
+++ b/build.xml
@@ -124,7 +124,7 @@
 		<!-- Expand the Mac AIK on top of the SDK -->
         <copy file="${FLEX_HOME}/in/air/mac/AIR Integration Kit.tbz2" todir="${FLEX_HOME}"/>
 		<echo file="${FLEX_HOME}/air_unzip.sh">#!/bin/sh
-tar -xjf "AIR Integration Kit.tbz2" .
+tar -xjf "AIR Integration Kit.tbz2" 
 		</echo>
 		<exec executable="sh" dir="${FLEX_HOME}">
 			<arg line="${FLEX_HOME}/air_unzip.sh"/>
