Transferred from the Adobe Open Source Subversion Repository
Revision: 11311
Author:   jimurphy@adobe.com
Date:     2009-10-30T17:00:39.487177Z

Log Message: 
-----------
hook up the building of the playerglobal_rb fat swcs.  Currently this will only produce en_US based docs for all languages we are building for.  Once we get translated dita files we will start using them.

QE notes: all langs will be in English 
Doc notes: 
Bugs: no
Reviewer: Pete
Tests run: checkintests
Is noteworthy for integration: no

Modified Paths:
--------------
<path kind="file" action="M">/flex/sdk/trunk/frameworks/projects/playerglobal/bundles/en_US/docs/__Global__.xml</path>
<path kind="file" action="M">/flex/sdk/trunk/frameworks/projects/playerglobal/bundles/en_US/docs/air.update.xml</path>
<path kind="file" action="M">/flex/sdk/trunk/frameworks/projects/playerglobal/bundles/en_US/docs/packages.dita</path>
<path kind="file" action="M">/flex/sdk/trunk/frameworks/projects/playerglobal/bundles/en_US/docs/flash.html.xml</path>
<path kind="file" action="M">/flex/sdk/trunk/frameworks/projects/playerglobal/bundles/en_US/docs/air.net.xml</path>
<path kind="file" action="A">/flex/sdk/trunk/frameworks/projects/playerglobal/bundles/en_US/docs/authoring.xml</path>
<path kind="file" action="M">/flex/sdk/trunk/frameworks/projects/playerglobal/bundles/en_US/docs/flash.events.xml</path>
<path kind="file" action="M">/flex/sdk/trunk/frameworks/projects/playerglobal/bundles/en_US/docs/flash.net.drm.xml</path>
<path kind="file" action="M">/flex/sdk/trunk/frameworks/projects/playerglobal/bundles/en_US/docs/flash.filters.xml</path>
<path kind="file" action="M">/flex/sdk/trunk/frameworks/projects/playerglobal/bundles/en_US/docs/flash.data.xml</path>
<path kind="file" action="M">/flex/sdk/trunk/frameworks/projects/playerglobal/bundles/en_US/docs/flash.desktop.xml</path>
<path kind="file" action="M">/flex/sdk/trunk/frameworks/projects/playerglobal/bundles/en_US/docs/flash.external.xml</path>
<path kind="file" a

--- a/build.xml
+++ b/build.xml
@@ -156,6 +156,7 @@ tar -xjf "AIR Integration Kit.tbz2"
 		<ant dir="${basedir}/projects/airframework" target="other.locales"/>
 		<ant dir="${basedir}/projects/spark" target="other.locales"/>
 		<ant dir="${basedir}/projects/rpc" target="other.locales"/>
+		<ant dir="${basedir}/projects/playerglobal" target="other.locales" />
 	</target>
 
     <target name="updateAIR" description="Rebuild a AIK SWC and SWF that depend on Flex" >
