Transferred from the Adobe Open Source Subversion Repository
Revision: 11449
Author:   rfrishbe@adobe.com
Date:     2009-11-05T01:09:57.699854Z

Log Message: 
-----------
Adding OSMF to our framework.  The osmf.swc builds automatically as part of our build process.  I'm also adding new video classes that use OSMF, spark.components.VideoDisplay and spark.components.VideoPlayer2.  The other VideoElement and VideoPlayer will be replaced by these.  The new video components are not yet complete; this is an initial checkin for these components.

QE notes: -
Doc notes: -
Bugs: -
Reviewer: Deepa (only the build processes stuff)
Tests run: checkintests
Is noteworthy for integration: Yes

Modified Paths:
--------------
283 paths were modified

git-svn-id: https://svn.apache.org/repos/asf/incubator/flex/trunk/frameworks@1247546 13f79535-47bb-0310-9956-ffa450edef68

--- a/build.xml
+++ b/build.xml
@@ -17,7 +17,7 @@
 
 	<property file="${FLEX_HOME}/build.properties"/>
 
-	<target name="main" depends="clean,prepare,javascript,tlf,framework,spark,sparkskins,rpc,airframework,flex,flash_integration,utilities,halo,wireframe,updateAIR" description="Clean build of all SWCs"/>
+	<target name="main" depends="clean,prepare,javascript,tlf,osmf,framework,spark,sparkskins,rpc,airframework,flex,flash_integration,utilities,halo,wireframe,updateAIR" description="Clean build of all SWCs"/>
 
 	<target name="doc" >
 		<ant dir="${basedir}/projects/framework" target="doc" />
@@ -28,6 +28,7 @@
 		<ant dir="${basedir}/projects/flex" target="doc" />
 		<ant dir="${basedir}/projects/utilities" target="doc" />
 		<ant dir="${basedir}/projects/halo" target="doc" />
+        <ant dir="${basedir}/projects/osmf" target="doc" />
 		<ant dir="${basedir}/projects/textLayout" target="doc" />
 		<ant dir="${basedir}/projects/wireframe" target="doc" />
 		<ant dir="${basedir}/projects/flash-integration" target="doc" />
@@ -63,6 +64,10 @@
 
 	<target name="flash_integration" description="Clean build of FlexComponentBase.swc">
 		<ant dir="${basedir}/projects/flash-integration"/>
+	</target>
+    
+    <target name="osmf" description="Clean build of osmf.swc">
+		<ant dir="${basedir}/projects/osmf"/>
 	</target>
 
     <target name="rpc" description="Clean build of rpc.swc">
@@ -101,6 +106,7 @@
 		<ant dir="${basedir}/projects/framework" target="clean"/>
 		<ant dir="${basedir}/projects/airframework" target="clean"/>
 		<ant dir="${basedir}/projects/flex" target="clean"/>
+        <ant dir="${basedir}/projects/osmf" target="clean"/>
 		<ant dir="${basedir}/projects/textLayout" target="clean"/>
 		<ant dir="${basedir}/projects/spark" target="clean"/>
 		<ant dir="${basedir}/projects/sparkskins" target="clean"/>
@@ -140,6 +146,7 @@ tar -xjf "AIR Integration Kit.tbz2"
 	
 	<target name="compile" description="Builds all SWCs but not their resource bundles">
 		<ant dir="${basedir}/projects/tlf" target="compile"/>
+        <ant dir="${basedir}/projects/osmf" target="compile"/>
 		<ant dir="${basedir}/projects/framework" target="compile"/>
 		<ant dir="${basedir}/projects/airframework" target="compile"/>
 		<ant dir="${basedir}/projects/flex" target="compile"/>
