Transferred from the Adobe Open Source Subversion Repository
Revision: 11460
Author:   cframpto@adobe.com
Date:     2009-11-05T14:26:18.794621Z

Log Message: 
-----------
TLF build 545.  As of this submit, when we update TLF, we will also update framework/libs/textLayout.swc with the version built by the TLF team.  

It is still possible to build TLF from sources using ant tlf in the frameworks directory or just ant in the frameworks/projects/textLayout directory.  The generated swc will overwrite the swc from svn.

Fixes since the last update:

Build 545
	* Fix 2469183 paddingRight not applied in contentBounds in vertical measured text
	* Fix 2458351 [SDK-23668] TextFlow class marked as final
	* Fix 2464448 Rename package flash.textLayout.acc flash.textLayout.accessibility
	* Fix 2365702 [SDK-22011] Setting TextFlow attributes with out of range values should generate an RTE
	 -When an error is detected the format will no longer be changed.
	 -A number or int format setting will be in error if parseFloat (or parseInt) returns NaN.
	 - Out of range number or int properties will be an error
	 - Invalid enumeration settings will be an error
	 - Property class will have a global “errorCallback” function.  This will default to throwing on error. 
	 - The TLF ITextImporter implementers (for HTML and TLF markup) have a throwOnError setting.  If false the change will be to collect the errors in the errors array along with the other import errors as currently done.  If true then the importer will throw on the first error.  During an import the importers may temporarily replace the errorCallback function
	 - Clients may replace the global errorCallback function.
	 - Properties now treat null as undefined - this is to support flex data binding which sets properties to null with great frequency

QE notes: 
Doc notes: 
Bugs: 
Reviewer: 
Tests run: checkintests
Is noteworthy for integration: no

Modified Paths:
--------------
<path kind="file" action="M">/flex/sdk/trunk/framework

--- a/build.xml
+++ b/build.xml
@@ -17,7 +17,7 @@
 
 	<property file="${FLEX_HOME}/build.properties"/>
 
-	<target name="main" depends="clean,prepare,javascript,tlf,osmf,framework,spark,sparkskins,rpc,airframework,flex,flash_integration,utilities,halo,wireframe,updateAIR" description="Clean build of all SWCs"/>
+	<target name="main" depends="clean,prepare,javascript,osmf,framework,spark,sparkskins,rpc,airframework,flex,flash_integration,utilities,halo,wireframe,updateAIR" description="Clean build of all SWCs"/>
 
 	<target name="doc" >
 		<ant dir="${basedir}/projects/framework" target="doc" />
@@ -29,7 +29,6 @@
 		<ant dir="${basedir}/projects/utilities" target="doc" />
 		<ant dir="${basedir}/projects/halo" target="doc" />
         <ant dir="${basedir}/projects/osmf" target="doc" />
-		<ant dir="${basedir}/projects/textLayout" target="doc" />
 		<ant dir="${basedir}/projects/wireframe" target="doc" />
 		<ant dir="${basedir}/projects/flash-integration" target="doc" />
 	</target>
@@ -74,6 +73,7 @@
 		<ant dir="${basedir}/projects/rpc"/>
     </target>
 
+	<!-- For debugging only.  For release, we distribute the swc built by the TLF team. -->
 	<target name="tlf" description="Clean build of textLayout.swc">
 		<ant dir="${basedir}/projects/textLayout"/>
 	</target>
@@ -107,7 +107,6 @@
 		<ant dir="${basedir}/projects/airframework" target="clean"/>
 		<ant dir="${basedir}/projects/flex" target="clean"/>
         <ant dir="${basedir}/projects/osmf" target="clean"/>
-		<ant dir="${basedir}/projects/textLayout" target="clean"/>
 		<ant dir="${basedir}/projects/spark" target="clean"/>
 		<ant dir="${basedir}/projects/sparkskins" target="clean"/>
 		<ant dir="${basedir}/projects/utilities" target="clean"/>
@@ -145,7 +144,6 @@ tar -xjf "AIR Integration Kit.tbz2"
 	</target>
 	
 	<target name="compile" description="Builds all SWCs but not their resource bundles">
-		<ant dir="${basedir}/projects/tlf" target="compile"/>
         <ant dir="${basedir}/projects/osmf" target="compile"/>
 		<ant dir="${basedir}/projects/framework" target="compile"/>
 		<ant dir="${basedir}/projects/airframework" target="compile"/>
