--- a/frameworks/build.xml
+++ b/frameworks/build.xml
@@ -17,7 +17,7 @@
 
 	<property file="${FLEX_HOME}/build.properties"/>
 
-	<target name="main" depends="clean,prepare,javascript,tlf,osmf,framework,spark,sparkskins,rpc,airframework,flex,flash_integration,utilities,halo,wireframe,updateAIR" description="Clean build of all SWCs"/>
+	<target name="main" depends="clean,prepare,javascript,osmf,framework,spark,sparkskins,rpc,airframework,flex,flash_integration,utilities,halo,wireframe,updateAIR" description="Clean build of all SWCs"/>
 
 	<target name="doc" >
 		<ant dir="${basedir}/projects/framework" target="doc" />
@@ -29,7 +29,6 @@
 		<ant dir="${basedir}/projects/utilities" target="doc" />
 		<ant dir="${basedir}/projects/halo" target="doc" />
         <ant dir="${basedir}/projects/osmf" target="doc" />
-		<ant dir="${basedir}/projects/textLayout" target="doc" />
 		<ant dir="${basedir}/projects/wireframe" target="doc" />
 		<ant dir="${basedir}/projects/flash-integration" target="doc" />
 	</target>
@@ -74,6 +73,7 @@
 		<ant dir="${basedir}/projects/rpc"/>
     </target>
 
+	<!-- For debugging only.  For release, we distribute the swc built by the TLF team. -->
 	<target name="tlf" description="Clean build of textLayout.swc">
 		<ant dir="${basedir}/projects/textLayout"/>
 	</target>
@@ -107,7 +107,6 @@
 		<ant dir="${basedir}/projects/airframework" target="clean"/>
 		<ant dir="${basedir}/projects/flex" target="clean"/>
         <ant dir="${basedir}/projects/osmf" target="clean"/>
-		<ant dir="${basedir}/projects/textLayout" target="clean"/>
 		<ant dir="${basedir}/projects/spark" target="clean"/>
 		<ant dir="${basedir}/projects/sparkskins" target="clean"/>
 		<ant dir="${basedir}/projects/utilities" target="clean"/>
@@ -145,7 +144,6 @@ tar -xjf "AIR Integration Kit.tbz2"
 	</target>
 	
 	<target name="compile" description="Builds all SWCs but not their resource bundles">
-		<ant dir="${basedir}/projects/tlf" target="compile"/>
         <ant dir="${basedir}/projects/osmf" target="compile"/>
 		<ant dir="${basedir}/projects/framework" target="compile"/>
 		<ant dir="${basedir}/projects/airframework" target="compile"/>
