--- a/frameworks/build.xml
+++ b/frameworks/build.xml
@@ -15,6 +15,15 @@
 
 	<property name="FLEX_HOME" location=".."/>
 
+        <!-- Required for OSX 10.6 / Snow Leopard Performance -->
+        <condition property="local.d32" value="-d32" >
+                <and>
+                <equals arg1="${sun.arch.data.model}" arg2="64"/>
+                <equals arg1="${os.arch}" arg2="x86_64"/>
+                <os family="mac"/>
+                </and>
+        </condition>
+
 	<property file="${FLEX_HOME}/build.properties"/>
 
 	<target name="main" depends="clean,prepare,javascript,osmf,framework,spark,sparkskins,rpc,airframework,flex,flash_integration,utilities,halo,wireframe,updateAIR" description="Clean build of all SWCs"/>
