Transferred from the Adobe Open Source Subversion Repository
Revision: 12663
Author:   jimurphy@adobe.com
Date:     2009-12-08T20:22:31.813782Z

Log Message: 
-----------
Adding the resource bundle and fat-swc targets for osmf and textlayout.  Also for osmf adding the doc target.  This new format that I added to the two project build files will be what we will use going forward for all projects.  I have all the other projects modified and plan on checking them in soon.  The format change will make adding new locales easier as well as adding the fat-swc target when needed.
  
QE notes: no
Doc notes: no
Bugs: no
Reviewer: gaurav
Tests run: checkintests
Is noteworthy for integration: no

Modified Paths:
--------------
<path kind="file" action="D">/flex/sdk/trunk/frameworks/projects/osmf/src/OSMFDocClasses.as</path>
<path kind="file" action="M">/flex/sdk/trunk/frameworks/build.xml</path>
<path kind="file" action="A">/flex/sdk/trunk/frameworks/projects/osmf/bundles/en_US/osmf.properties</path>
<path kind="dir" action="A">/flex/sdk/trunk/frameworks/projects/osmf/bundles/en_US</path>
<path kind="dir" action="A">/flex/sdk/trunk/frameworks/projects/osmf/bundles</path>
<path kind="file" action="D">/flex/sdk/trunk/frameworks/projects/textLayout/bundles/en_US/empty.properties</path>
<path kind="file" action="M">/flex/sdk/trunk/frameworks/projects/textLayout/build.xml</path>
<path kind="file" action="M">/flex/sdk/trunk/frameworks/projects/osmf/build.xml</path>
<path kind="file" action="A">/flex/sdk/trunk/frameworks/projects/textLayout/bundles/en_US/textLayout.properties</path>

git-svn-id: https://svn.apache.org/repos/asf/incubator/flex/trunk/frameworks@1247551 13f79535-47bb-0310-9956-ffa450edef68

--- a/build.xml
+++ b/build.xml
@@ -41,6 +41,7 @@
         <ant dir="${basedir}/projects/osmf" target="doc" />
 		<ant dir="${basedir}/projects/wireframe" target="doc" />
 		<ant dir="${basedir}/projects/flash-integration" target="doc" />
+		<ant dir="${basedir}/projects/textLayout" target="doc" />
 	</target>
 
     <target name="airframework" description="Clean build of airframework.swc">
