Transferred from the Adobe Open Source Subversion Repository
Revision: 12891
Author:   dloverin@adobe.com
Date:     2009-12-13T06:19:41.907953Z

Log Message: 
-----------
Another attempt to fix broken build.

QE notes: None.
Doc notes: None.
Bugs:
Reviewer: 
Tests run:
Is noteworthy for integration: no

Modified Paths:
--------------
<path kind="file" action="M">/flex/sdk/trunk/frameworks/build.xml</path>
<path kind="file" action="M">/flex/sdk/trunk/asdoc/build.xml</path>

git-svn-id: https://svn.apache.org/repos/asf/incubator/flex/trunk/frameworks@1247554 13f79535-47bb-0310-9956-ffa450edef68

--- a/build.xml
+++ b/build.xml
@@ -75,7 +75,7 @@
 	    <ant dir="${basedir}/projects/airspark" target="doc" />
     	<ant dir="${basedir}/projects/flex" target="doc" />
 		<ant dir="${basedir}/projects/utilities" target="doc" />
-		<ant dir="${basedir}/projects/halo" target="doc" />
+<!--		<ant dir="${basedir}/projects/halo" target="doc" /> -->
         <ant dir="${basedir}/projects/osmf" target="doc" />
 		<ant dir="${basedir}/projects/wireframe" target="doc" />
 		<ant dir="${basedir}/projects/flash-integration" target="doc" />
