Transferred from the Adobe Open Source Subversion Repository
Revision: 12905
Author:   jimurphy@adobe.com
Date:     2009-12-14T17:42:47.662037Z

Log Message: 
-----------
-fix the textLayout bundle target to use the correct playerglobal version so that it builds correctly.  I have also turn the building of this rb back on.
-add the building of bundle and fat-swc to flash-integration; also added bundles/en_US directory with empty.properties


QE notes: no
Doc notes:  
Bugs: no
Reviewer: 
Tests run: checkintests
Is noteworthy for integration: no

Modified Paths:
--------------
<path kind="file" action="M">/flex/sdk/trunk/frameworks/build.xml</path>
<path kind="file" action="M">/flex/sdk/trunk/frameworks/projects/datavisualization/build.xml</path>
<path kind="dir" action="A">/flex/sdk/trunk/frameworks/projects/flash-integration/bundles</path>
<path kind="file" action="M">/flex/sdk/trunk/frameworks/projects/flash-integration/build.xml</path>
<path kind="file" action="A">/flex/sdk/trunk/frameworks/projects/flash-integration/bundles/en_US/empty.properties</path>
<path kind="file" action="M">/flex/sdk/trunk/frameworks/projects/textLayout/build.xml</path>
<path kind="dir" action="A">/flex/sdk/trunk/frameworks/projects/flash-integration/bundles/en_US</path>

git-svn-id: https://svn.apache.org/repos/asf/incubator/flex/trunk/frameworks@1247555 13f79535-47bb-0310-9956-ffa450edef68

--- a/build.xml
+++ b/build.xml
@@ -57,7 +57,7 @@
 		<ant dir="${basedir}/projects/datavisualization" target="other.locales"/>
 		<ant dir="${basedir}/projects/spark" target="other.locales"/>
 		<ant dir="${basedir}/projects/osmf" target="other.locales"/>
-		<!--<ant dir="${basedir}/projects/textLayout" target="other.locales"/>-->
+		<ant dir="${basedir}/projects/textLayout" target="other.locales"/>
 		<ant dir="${basedir}/projects/playerglobal" target="other.locales" />
 		<ant dir="${basedir}/projects/automation" target="other.locales"/>
 		<ant dir="${basedir}/projects/automation_dmv" target="other.locales"/>
@@ -81,7 +81,7 @@
 		<ant dir="${basedir}/projects/flash-integration" target="doc" />
 		<!--<ant dir="${basedir}/projects/automation_dmv" target="doc" />-->
 		<ant dir="${basedir}/projects/automation_spark" target="doc" />
-	    <!--<ant dir="${basedir}/projects/textLayout" target="doc" />-->
+	    <ant dir="${basedir}/projects/textLayout" target="doc" />
 	</target>
    
 	<target name="clean" description="Cleans all SWCs and their resource bundles">
